styling: fixed margin for table on home page cutting off the table switcher and the tag filter table height setting making tags spaced out.

--- a/neuro_arcade/reactapp/src/styles/components/Table.module.css
+++ b/neuro_arcade/reactapp/src/styles/components/Table.module.css
@@ -95,7 +95,7 @@
 
 @media(max-width: 78em) {
     #home {
-        margin: 1em auto 0;
+        margin: 2em auto 0;
     }
 }
 
